<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_MCSafety" Id="{408e1c6e-7663-05c5-1c01-34065daabb61}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	flSS1				: FB_BaseFlag;
	flSTO				: FB_BaseFlag;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>